--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    margin: 0;
+  padding: 0;
+
+  
+
 }
 
 @font-face{
