--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -52,9 +52,22 @@
 
   }
 
+  .clipNotch a {
+    position: relative;
+    z-index: 100;
+  }
+  
+  .clipNotch p {
+    user-select: text;
+  }
+  
+
   .techStacks {
     display: flex;
     justify-content: space-between;
+    padding-left: 60px;
+    padding-right: 60px;  
+ 
   }
   
   .techStacksMobile {
