--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -64,9 +64,10 @@
 
   .techStacks {
     display: flex;
-    justify-content: space-between;
-    padding-left: 60px;
-    padding-right: 60px;  
+    /* flex-direction: column; */
+    justify-content: space-around;
+    /* padding-left: 60px;
+    padding-right: 60px;   */
  
   }
   
